--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,19 +14,20 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
 
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "preserve",
 
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"]
     }
   },
-  "include": ["src", "tests/performance.test.ts", "tests/utils.test.ts", "tests/math.test.ts"]
+  "include": ["src",  "types" ]
 }
